clang/test/BSC/Negative/OperatorOverload/not_match_param_num/not_match_param_num.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

struct E {
    int a;
};

struct F {
    int * a;
};
int a = 1;
// unary
__attribute((operator ->))
int * operator1() {                             // expected-error {{overloaded 'operator1' must have at least one parameter of class or enumeration type}}
    return &a;
}

__attribute((operator ->))
int * operator2(struct F e1) {
    return e1.a;
}

__attribute((operator ->))
int * operator3(struct F e1, struct F e2) {        // expected-error {{overloaded 'operator3' must be a unary operator (has 2 parameters)}}
    return e1.a;
}

// binary or unary
__attribute((operator *))
int operator4() {                               // expected-error {{overloaded 'operator4' must have at least one parameter of class or enumeration type}}
    return 1;
}

__attribute((operator *))
int operator5(struct E e1) {                    // ok
    return e1.a;
}

__attribute((operator *))
int operator6(struct E e1, struct E e2) {       // ok
    return e1.a - e2.a;
}

// binary
__attribute((operator %))
int operator7() {                               // expected-error {{overloaded 'operator7' must have at least one parameter of class or enumeration type}}
    return 1;
}

__attribute((operator %))
int operator8(struct E e1) {                    // expected-error {{overloaded 'operator8' must be a binary operator (has 1 parameter)}}
    return e1.a;
}

__attribute((operator %))
int operator9(struct E e1, struct E e2) {
    return e1.a - e2.a;
}